2002-11-03  Christian Reis    <kiko@async.com.br>

    * gtkmodule.c, gtk.py: wrap gtk_radio_button_group() (bug #93772)

2002-08-23  James Henstridge  <james@daa.com.au>

	* NEWS: add news items.

	* configure.in: update version number.

	* gtk.py (GtkWidget.queue_draw_area): fix up function.
	(GtkWidget.queue_clear): here too.
	(GtkWidget.queue_clear_area): and here.

2002-08-22  James Henstridge  <james@daa.com.au>

	* NEWS: add news for PyGTK 0.6.10.

2002-08-20  James Henstridge  <james@daa.com.au>

	* gtk.py: always call _gtk.gtk_init().  This way people can check
	for the runtime error on import of gtk.

2002-08-18  James Henstridge  <james@daa.com.au>

	* libglademodule.c (_wrap_glade_xml_get_widget_prefix): add
	method (from bug #72659).

	* libglade.py (GladeXML.get_widget_prefix): add method wrapper.

	* pygtk.spec: fix up spec file to reflect new locations of files.

	* pygtk.py: helper script for parallel installs.

	* Makefile.am: fix up makefile for parallel install.

2002-08-14  Johan Dahlin  <jdahlin@telia.com>

	Patch from Christian Reis <kiko@async.com.br>, fixes bug 88845:
	* gtk.py: Add pos argument to Editable.insert_text
        * gtkmodule.c: Dito

2002-04-08  Matt Wilson  <msw@redhat.com>

	* gdkpixbufmodule.c (pygdk_pixbuf_scale, pygdk_pixbuf_composite)
	(pygdk_pixbuf_composite_color): parse arguments as double for
	those functions that take doubles.

	* generate/gtkmisc.defs (gtk_pixmap_set): added (null-ok).  NULL
	means that the pixmap has no alpha.

2002-03-16  James Henstridge  <james@daa.com.au>

	* gtk.py (selection_owner_get): add wrapper (bug 66130)

	* generate/gtkdnd.defs (gdk_selection_owner_get): add function
	from bug 66130

	* gtk.py: add wrappers from bug 66121.

	* generate/gtk.defs (gdk_keyval_name): add keyval functions (from
	bug 66121).

2002-01-08  James Henstridge  <james@daa.com.au>

	* gdkpixbufmodule.c (pygdk_pixbuf_dealloc): use PyObject_DEL.
	(pygdk_pixbuf_animation_dealloc): same here.
