@@ -1,6 +1,15 @@
+2002-11-11  Christian Reis    <kiko@async.com.br>
+
+	* gtkmodule.c, gtk.py: implement GtkCList.set_focus_row to allow
+	working around GTK+ bug in SELECTION_BROWSE mode where select_row
+	does not move focus_row accordingly.
+
+	* libglade.py: raise exception when creating GladeXML instance
+	if C module returns None.
+
 2002-11-03  Christian Reis    <kiko@async.com.br>
 
-    * gtkmodule.c, gtk.py: wrap gtk_radio_button_group() (bug #93772)
+        * gtkmodule.c, gtk.py: wrap gtk_radio_button_group() (bug #93772)
 
 2002-08-23  James Henstridge  <james@daa.com.au>
 
@@ -1402,3 +1411,4 @@
 	
 	* NEWS: used to be Changelog
 	
+# vi: set ts=8 sts=8 noexpandtab:
